fix navbar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   background: #fff7ed !important;
   display: flex;
   justify-content: space-between;
-  /* align-items: baseline; */
+  align-items: baseline;
   list-style-type: none;
   margin: 10px;
   padding: 10px;
